--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,6 +18,6 @@
     <%= link_to Department.model_name.human(count: 2), departments_path, class: 'nav-link' %>
   </li>
   <li class="nav-item">
-    <%= link_to t('views.home.links.depreciation'), depreciation_path, class: 'nav-link' %>
+    <%= link_to t('views.home.links.depreciation'), depreciations_path, class: 'nav-link' %>
   </li>
 </ul>
