--- a/app/views/depreciations/_filters_form.html.erb
+++ b/app/views/depreciations/_filters_form.html.erb
@@ -1,7 +1,10 @@
-<%= form_tag depreciations_path, method: :get do |f| %>
+<%= form_for :filters, url: depreciations_path, html: { id: 'filters_form' } do |form| %>
+  <%= form.hidden_field :sub_kind_id, value: filters_params[:sub_kind_id] %>
+  <%= form.hidden_field :category_id, value: filters_params[:category_id] %>
+  <%= form.hidden_field :kind_id, value: filters_params[:kind_id] %>
   <div class="form-group">
-    <%= label_tag :kind, t('activerecord.models.good_kind.one') %>
-    <%= select_tag :kind, options_for_select(kinds), selected: params[:kind], prompt: t('views.all.male'), class: 'form-control' %>
+    <%= label_tag :kind_, t('activerecord.models.good_kind.one') %>
+    <%= select_tag :kind, options_for_select(kinds), class: 'form-control' %>
   </div>
   <div id="sub_kind_group" class="form-group">
     <%= label_tag :sub_kind, t('activerecord.models.good_sub_kind.one') %>
@@ -12,10 +15,10 @@
     <%= select_tag :category, grouped_options_for_select(categories), prompt: t('views.all.female'), class: 'form-control' %>
   </div>
   <div id="goods_group" class="form-group">
-    <%= label_tag :goods, t('activerecord.models.good.other') %>
-    <%= text_field_tag :goods, nil, class: 'form-control wd-2' %>
+    <%= form.label :goods, t('activerecord.models.good.other') %>
+    <%= form.text_field :goods, value: filters_params[:goods], class: 'form-control wd-2' %>
   </div>
   <div class="actions">
-    <%= submit_tag t('views.depreciations.actions.apply'), class: 'btn btn-primary' %>
+    <%= form.submit t('views.depreciations.actions.apply'), class: 'btn btn-primary' %>
   </div>
 <% end %>
