ajustes de css na home. adicionado flex ao body.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -31,12 +31,12 @@
 
 // li:hover ul { display: block; }
 
-// ul li a:hover { background-color: #99c0ff}
+
 
 #menu {
   border-right: 1px solid rgb(206, 212, 218);
   border-top: 1px solid rgb(206, 212, 218);
-  width: max-content;
+  width: 150px;
   height: 100%;
   background-color: rgb(248, 249, 250);
   // background-color: #c6e9ff;
@@ -45,3 +45,9 @@
 #menu li {
   border-bottom: 1px solid  rgb(206, 212, 218);
 }
+
+#menu li a {
+  color: rgba(0, 0, 0, 0.9);
+}
+
+#menu li a:hover { background-color: #99c0ff}
