--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,13 +18,18 @@
 @import "font-awesome";
 @import "bootstrap-datepicker";
 
+div#content {
+  height: 100%;
+}
+
 html {
-  min-height: 100vh;
-  height: 100vh
+  height: 100%;
 }
 
 body {
-  height: 100%
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .form-actions {
