adicionado paginaçao com a gem kaminari

--- a/app/views/good_kinds/index.html.erb
+++ b/app/views/good_kinds/index.html.erb
@@ -23,5 +23,8 @@
         <% end %>
       </tbody>
     </table>
+    <div class="d-flex justify-content-center" style="width: 100%;">
+      <%= paginate @good_kinds, theme: 'twitter-bootstrap-4' %>
+    </div>
   </div>
 </div>
