--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -31,5 +31,8 @@
         <% end %>
       </tbody>
     </table>
+    <div class="d-flex justify-content-center" style="width: 100%;">
+      <%= paginate @goods, theme: 'twitter-bootstrap-4' %>
+    </div>
   </div>
 </div>
