--- a/app/views/good_categories/index.html.erb
+++ b/app/views/good_categories/index.html.erb
@@ -25,5 +25,8 @@
         <% end %>
       </tbody>
     </table>
+    <div class="d-flex justify-content-center" style="width: 100%;">
+      <%= paginate @good_categories, theme: 'twitter-bootstrap-4' %>
+    </div>
   </div>
 </div>
