--- a/app/views/goods/new.html.erb
+++ b/app/views/goods/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container form">
   <h1><%= t('views.goods.new.title') %></h1>
   <%= render 'form', good: @good, categories: @categories, departments: @departments, situations: @situations %>
 </div>
