--- a/app/views/goods/_form.html.erb
+++ b/app/views/goods/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: good, local: true) do |form| %>
+<%= form_with(model: good, local: true, html: { class: 'form' }) do |form| %>
   <% if good.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(good.errors.count, "error") %> prohibited this good from being saved:</h2>
@@ -38,8 +38,16 @@
     <%= form_datepicker_field(form, :base_date) %>
   </div>
   <div class="form-group">
+    <%= label_tag :kind_id %>
+    <%= select_tag :kind_id, options_for_select(kinds), prompt: :select_text, class: 'form-control' %>
+  </div>
+  <div class="form-group">
+    <%= label_tag :sub_kind_id %>
+    <%= select_tag :sub_kind_id, grouped_options_for_select(sub_kinds), prompt: :select_text, class: 'form-control' %>
+  </div>
+  <div class="form-group">
     <%= form.label :good_category_id %>
-    <%= form.select :good_category_id, categories, { prompt: :select_text }, class: 'form-control' %>
+    <%= form.select :good_category_id, grouped_options_for_select(categories), { prompt: :select_text }, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= form.label :department_id %>
