--- a/app/views/goods/_form.html.erb
+++ b/app/views/goods/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: good, local: true, html: { class: 'form' }) do |form| %>
+<%= form_with(model: good, local: true, html: { class: 'form', id: 'good_form' }) do |form| %>
   <% if good.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(good.errors.count, "error") %> prohibited this good from being saved:</h2>
@@ -9,6 +9,7 @@
       </ul>
     </div>
   <% end %>
+  <%= form.hidden_field :good_category_id %>
   <div class="form-group">
     <%= form.label :code %>
     <%= form.text_field :code, class: 'form-control wd-100' %>
@@ -39,15 +40,15 @@
   </div>
   <div class="form-group">
     <%= label_tag :kind_id %>
-    <%= select_tag :kind_id, options_for_select(kinds), prompt: :select_text, class: 'form-control' %>
+    <%= select_tag :kind_id, options_for_select(kinds), class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= label_tag :sub_kind_id %>
-    <%= select_tag :sub_kind_id, grouped_options_for_select(sub_kinds), prompt: :select_text, class: 'form-control' %>
+    <%= select_tag :sub_kind_id, grouped_options_for_select(sub_kinds), class: 'form-control' %>
   </div>
   <div class="form-group">
-    <%= form.label :good_category_id %>
-    <%= form.select :good_category_id, grouped_options_for_select(categories), { prompt: :select_text }, class: 'form-control' %>
+    <%= label_tag :category_id %>
+    <%= select_tag :category_id, grouped_options_for_select(categories), prompt: :select_text, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= form.label :department_id %>
