corrigido bug no js dos bens

--- a/app/assets/javascripts/goods.js.erb
+++ b/app/assets/javascripts/goods.js.erb
@@ -52,6 +52,7 @@ $(document).on('turbolinks:load', function () {
       clearAll()
     } else {
       setSubKinds(kind.val())
+      setCategories(sub_kind.val())
     }
   })
 
