--- a/app/views/goods/_form.html.erb
+++ b/app/views/goods/_form.html.erb
@@ -57,7 +57,7 @@
       <div class="input-group">
         <%= text_field_tag :department, nil, disabled: true, class: 'form-control fit-content' %>
         <div class="input-group-append">
-          <%= button_tag t('views.actions.select'), type: :button, id: 'btn_department_select', class: 'btn btn-outline-secondary', data: { toggle: 'modal', target: '#modal_departments' } %>
+          <%= button_tag t('views.actions.select'), type: :button, id: 'btn_department_select', class: 'btn btn-outline-secondary', data: { toggle: 'modal', backdrop: 'static', target: '#modal_departments' } %>
         </div>
       </div>
     </div>
