ajuste js seleçao de departamentos

--- a/app/views/goods/_form.html.erb
+++ b/app/views/goods/_form.html.erb
@@ -50,12 +50,12 @@
     <%= label_tag :category_id, t('activerecord.attributes.good.good_category_id') %>
     <%= select_tag :category_id, grouped_options_for_select(categories), prompt: :select_text, class: 'form-control' %>
   </div>
-  <% if action_name == 'new' %>
+  <% if ['new', 'create'].member? action_name %>
     <div class="form-group">
       <%= form.label :department_id %>
-      <%# form.select :department_id, departments, { prompt: :select_text }, class: 'form-control' %>
+      <%= form.hidden_field :department_id, id: :department_id %>
       <div class="input-group">
-        <%= text_field_tag :department, nil, disabled: true, class: 'form-control fit-content' %>
+        <%= text_field_tag :department, nil, disabled: true, id: :department, class: 'form-control fit-content' %>
         <div class="input-group-append">
           <%= button_tag t('views.actions.select'), type: :button, id: 'btn_department_select', class: 'btn btn-outline-secondary', data: { toggle: 'modal', backdrop: 'static', target: '#modal_departments' } %>
         </div>
