--- a/app/views/goods/modals/_departments_selection.html.erb
+++ b/app/views/goods/modals/_departments_selection.html.erb
@@ -2,7 +2,7 @@
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+        <h5 class="modal-title" id="exampleModalLabel"><%= t('views.goods.department_select.title') %></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -11,7 +11,7 @@
         <table id="departments_table" class="table">
           <thead>
             <tr>
-              <th colspan="2">Propriedade</th>
+              <th colspan="2"><%= Property.model_name.human(count: 2) %></th>
             </tr>
           </thead>
           <tbody>
@@ -28,7 +28,7 @@
                   <table class="table table-sm">
                     <thead>
                       <tr>
-                        <th colspan="2">Departamentos</th>
+                        <th colspan="2"><%= Department.model_name.human(count: 2) %></th>
                       </tr>
                     </thead>
                     <tbody>
@@ -38,6 +38,7 @@
                             <%= check_box_tag :selected %>
                           </td>
                           <td><%= department.description %></td>
+                          <td style='display: none;'><%= department.id %></td>
                         </tr>
                       <% end %>
                     </tbody>
@@ -49,7 +50,7 @@
         </table>
       </div>
       <div class="modal-footer">
-        <%= button_tag t('views.actions.save'), id: 'btn_save', type: :button, class: 'btn btn-primary' %>
+        <%= button_tag t('views.actions.save'), id: 'btn_save_department', type: :button, class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
@@ -65,7 +66,7 @@
          $(this).html('<%= fa_icon("plus-square") %>')
       }
   });
-  
+
   $(document).on("change", "#departments_table input:checkbox", function() {
     var row = $(this).parents("tr").first()
     var main_row = $(row).parents('tr').prev()
@@ -80,4 +81,17 @@
       $(main_row).removeClass("table-primary")
     }
    });
+
+  $(document).on("click", "#btn_save_department", function() {
+    row = $("#departments_table input:checkbox:checked").parents("tr").first()
+    description = $(row.children('td')[1]).html()
+    id = row.children('td').last().html()
+    $("#department_id").val(id)
+    $("#department").val(description)
+    $('#modal_departments').modal('hide')
+  });
+
+  $(document).on('turbolinks:load', function() {
+    
+  })
 </script>
